--- a/src/features/board/Board.module.css
+++ b/src/features/board/Board.module.css
@@ -1,21 +1,38 @@
 
 .board {
-  width: 448px;
-  height: 448px;
+  width: 464px;
+  height: 464px;
   margin: 0 auto;
 }
 
 .cell {
-  background: #fff;
-  border: 1px solid #999;
+  background-color: #02854b;
+  border: 1px solid #000;
   float: left;
-  font-size: 42px;
-  line-height: 56px;
+  font-size: 54px;
+  line-height: 54px;
   height: 56px;
   width: 56px;
-  margin-right: -1px;
-  margin-top: -1px;
   padding: 0;
+  margin: 0;
   text-align: center;
+}
+
+.cell button {
+  width: 100%;
+  height: 100%;
   cursor: pointer;
+  background-color: transparent;
+  background-repeat:no-repeat;
+  border: none;
+  overflow: hidden;
+  outline:none;
+}
+
+.white {
+  color: white;
+}
+
+.black {
+  color: black;
 }
